force-app/main/default/objects/TTS_Space__c/TTS_Space__c.object-meta.xml
<CustomObject>
    <description>Represents a physical space, such as an office, laboratory, incubator, meeting room, or workshop, managed by the technology transfer office.</description>
    <label>Space</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Space ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spaces</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>