force-app/main/default/objects/TTS_Space__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Stores the physical address or location details for the space.</description>
    <inlineHelpText>Enter the physical address or location details needed to find this space.</inlineHelpText>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>