force-app/main/default/objects/TTS_Space__c/fields/Next_Available_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Available_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Records the date when the space is next expected to become available.</description>
    <inlineHelpText>Enter the next date when this space is expected to be available.</inlineHelpText>
    <label>Next Available Date</label>
    <type>Date</type>
</CustomField>