force-app/main/default/objects/TTS_Space__c/fields/Parent_Space__c.field-meta.xml
<CustomField>
    <fullName>Parent_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this space to a containing or higher-level space in the location hierarchy.</description>
    <inlineHelpText>Select the larger space that contains this space, if applicable.</inlineHelpText>
    <label>Parent Space</label>
    <referenceTo>TTS_Space__c</referenceTo>
    <relationshipLabel>Spaces</relationshipLabel>
    <relationshipName>Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>