force-app/main/default/objects/TTS_Space__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <description>Identifies the enterprise programme this space supports, independent of its physical type.</description>
    <inlineHelpText>Select the programme this space is run under (e.g. Incubator, Accelerator). Leave blank for general-purpose space.</inlineHelpText>
    <label>Programme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Co-working</fullName>
            </value>
            <value>
                <fullName>Enterprise Hub</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Pre-incubation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>