force-app/main/default/objects/TTS_Space__c/fields/Space_Description__c.field-meta.xml
<CustomField>
    <fullName>Space_Description__c</fullName>
    <description>Stores descriptive details about the space, its purpose, and its facilities.</description>
    <inlineHelpText>Describe the space, including its purpose, facilities, or other useful details.</inlineHelpText>
    <label>Space Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>