force-app/main/default/objects/TTS_Space__c/fields/Space_Reference__c.field-meta.xml
<CustomField>
    <fullName>Space_Reference__c</fullName>
    <description>Stores the human-readable reference used to identify the space and supports matching with external records.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the reference used to identify the space, such as room number E1.14.</inlineHelpText>
    <label>Space Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>