force-app/main/default/objects/TTS_Space__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Identifies the current occupancy or operating status of the space.</description>
    <inlineHelpText>Select the status that best reflects whether the space is occupied, available, on hold, under maintenance, or no longer used.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed for Maintenance</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>No Longer In Use</fullName>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Unoccupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>