force-app/main/default/objects/TTS_Space__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Stores the maximum number of people or units the space can accommodate.</description>
    <inlineHelpText>Enter the maximum number of people or units this space can accommodate.</inlineHelpText>
    <label>Total Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>