force-app/main/default/objects/TTS_Space__c/fields/Total_Occupants__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupants__c</fullName>
    <description>Counts all Space Tenant records related to this space.</description>
    <inlineHelpText>Shows the number of tenant records associated with this space.</inlineHelpText>
    <label>Total Occupants</label>
    <summaryForeignKey>TTS_Space_Tenant__c.Space__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>