force-app/main/default/objects/TTS_Space__c/fields/Total_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Total_Tenants__c</fullName>
    <description>Sums the active-contact counts from all Space Tenant records related to this space.</description>
    <inlineHelpText>Shows the total active contacts across all tenants associated with this space.</inlineHelpText>
    <label>Total Tenants</label>
    <summarizedField>TTS_Space_Tenant__c.Total_Active_Contacts__c</summarizedField>
    <summaryForeignKey>TTS_Space_Tenant__c.Space__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>