force-app/main/default/objects/TTS_Space__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorizes the space by its primary function.</description>
    <inlineHelpText>Select the category that best describes how this space is used.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>Co-working</fullName>
            </value>
            <value>
                <fullName>Dedicated Desk</fullName>
            </value>
            <value>
                <fullName>Event Space</fullName>
            </value>
            <value>
                <fullName>Hot Desk</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Lab / Makerspace</fullName>
            </value>
            <value>
                <fullName>Meeting Room</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Virtual / Associate</fullName>
            </value>
            <value>
                <fullName>Workshop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>